# MD-ZDP

./: .gitignore  CMakeLists.txt  Makefile  Makefile_old  README.md  argon_output.txt  argon_td_converted.txt  argon_test.cfg  dumb_output.txt  dumb_test.cfg  m_chemistry.f90  m_gas.f90  m_output.f90  m_table_data.f90  m_transport_data.f90  m_types.f90  m_units_constants.f90  main.f90  qt_densities.txt  streamer_2d.cfg  streamer_2d_output.txt  zd_output.py
cfg_files/: andy_test_reduced.cfg  andy_test_smallerchem.cfg  andy_testcase.cfg  argon_test.cfg  dumb_test.cfg  hani_cf4.cfg  hani_sf6.cfg  hani_sf6_2.cfg  humid_air.cfg  streamer_2d.cfg
chemistry_data/: 98air_2water_chemistry_old.txt  argon_td_converted.txt  dumb_test_chem.txt  hani_cf4_chemistry.txt  hani_sf6_transportdata.txt  humid_air_2water_v1.txt
config_fortran/: m_config.f90
dumbtest/: dumb_test.cfg
src/: Makefile.makefile  m_chemistry.f90  m_field.f90  m_gas.f90  m_output.f90  m_table_data.f90  m_transport_data.f90  m_types.f90  main.f90
vis_python_script/: zd_argon.py
